# Orchestrator

./: .bumpversion.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: CI.yaml
chimerapy/orchestrator/: __init__.py  dashboard_app.py  init_services.py  orchestrator_config.py
chimerapy/orchestrator/cli/: __main__.py
chimerapy/orchestrator/models/: cluster_models.py  pipeline_config.py  pipeline_models.py
chimerapy/orchestrator/registered_nodes/: nodes.py
chimerapy/orchestrator/registry/: __init__.py  utils.py
chimerapy/orchestrator/routers/: cluster_router.py  error_mappers.py  pipeline_router.py
chimerapy/orchestrator/services/cluster_service/: cluster_manager.py  states.json  updates_broadcaster.py
chimerapy/orchestrator/services/pipeline_service/: __init__.py  pipeline.py  pipelines.py
chimerapy/orchestrator/state_machine/: fsm.py
chimerapy/orchestrator/tests/: base_test.py  test_monads.py  test_registry.py  utils.py
chimerapy/orchestrator/tests/data/: dummy_pipeline.json
chimerapy/orchestrator/tests/data/example_fsms/: push_pull_turnstile.json  workflow.json
chimerapy/orchestrator/tests/models/: test_cluster_models.py  test_pipeline_config.py  test_pipeline_models.py
chimerapy/orchestrator/tests/plugin-nodes-package/: setup.py
chimerapy/orchestrator/tests/plugin-nodes-package/plugin_nodes_package/: registered_nodes.py
chimerapy/orchestrator/tests/routers/: test_cluster_router.py  test_pipeline_router.py
chimerapy/orchestrator/tests/services/cluster_service/: test_cluster_manager.py  test_updates_broadcaster.py
chimerapy/orchestrator/tests/services/pipeline_service/: test_pipeline.py  test_pipelines.py
chimerapy/orchestrator/tests/state_machine/: test_fsm.py  test_models.py
chimerapy_orchestrator/: __init__.py  __main__.py  init_services.py  monads.py  orchestrator.py  orchestrator_config.py  pipeline_config.py  registry.py  utils.py
chimerapy_orchestrator/attributes_parser/: parser.py
chimerapy_orchestrator/cli/: __main__.py
chimerapy_orchestrator/cluster_service/: cluster_manager.py
chimerapy_orchestrator/models/: cluster_models.py  network_models.py  pipeline_config.py  pipeline_models.py  registry_models.py
chimerapy_orchestrator/network_service/: network_manager.py  network_service.py  operation.txt  states.json
chimerapy_orchestrator/node_attributes/: attributes_parser.py
chimerapy_orchestrator/nodes/: nodes.py
chimerapy_orchestrator/pipeline_service/: pipeline.py  pipelines.py
chimerapy_orchestrator/registered_nodes/: __init__.py  nodes.py
chimerapy_orchestrator/registry/: __init__.py  utils.py
chimerapy_orchestrator/routers/: cluster_router.py  error_mappers.py  network_router.py  pipeline_router.py
chimerapy_orchestrator/services/cluster_service/: async_task_queue.py  cluster_manager.py  states.json  updates_broadcaster.py
chimerapy_orchestrator/services/pipeline_service/: pipeline.py  pipelines.py
chimerapy_orchestrator/state_machine/: exceptions.py  fsm.py  lifecycle.json  models.py
chimerapy_orchestrator/tests/: test_monads.py  test_registry.py  utils.py
chimerapy_orchestrator/tests/data/: dummy_pipeline.json
chimerapy_orchestrator/tests/fsm/: test_fsm.py
chimerapy_orchestrator/tests/models/: test_pipeline_config.py  test_pipeline_models.py
chimerapy_orchestrator/tests/pipeline_service/: test_pipeline.py  test_pipelines.py
chimerapy_orchestrator/tests/plugin-nodes-package/: setup.py
chimerapy_orchestrator/tests/plugin-nodes-package/plugin_nodes_package/: __init__.py  registered_nodes.py
chimerapy_orchestrator/tests/routers/: test_cluster_router.py  test_pipeline_router.py
chimerapy_orchestrator/tests/services/cluster_service/: test_cluster_manager.py  test_updates_broadcaster.py
chimerapy_orchestrator/tests/services/pipeline_service/: test_pipeline.py  test_pipelines.py
chimerapy_orchestrator/tests/state_machine/: test_models.py
configs/: local_camera.json  local_camera_2mins.json  local_camera_remote_worker.json  local_screen_and_web.json
dashboard/: .gitignore  dummy_log_server.py  package-lock.json  package.json  svelte.config.js  vite.config.ts
dashboard/chimerapy_orchestrator_logs/chimerapy-2023_05_03_17_28_45-4590/: meta.json
dashboard/chimerapy_orchestrator_logs/chimerapy-2023_05_03_18_23_46-2880/: meta.json
dashboard/src/lib/: Icons.ts  NodeAttributes.ts  models.ts  pipelineConfig.ts  services.ts  stores.ts  utils.ts
dashboard/src/lib/Components/AttributesEditor/: AttributesEditor.svelte  Bool.svelte  Input.svelte
dashboard/src/lib/Services/: Client.ts  ClusterUtils.ts  PipelineApi.ts  PipelineUtils.ts  ReadableWebSocketStore.ts
dashboard/src/routes/: +layout.svelte  +layout.ts  +page.svelte
dashboard/src/routes/pipeline/: +page.svelte  Orchestrator.svelte  PipelineDesigner.svelte
dashboard/src/routes/pipeline-design/: +page.svelte  Orchestrator.svelte
dashboard/src/tests/lib/: utils.test.ts
(+26 files in other folders)
